Fix timeline annotation z-index

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -97,6 +97,7 @@ body {
             position: absolute;
             top: -22px;
             line-height: 20px;
+            z-index: 100;
             span.text {
                 color: #ffffff;
                 padding: 1px 5px;
